--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && nodemon server.js",
-    "client": "cd client && ng serve",
-    "postinstall": "npm install --prefix client && npm install --prefix server"
+    "client": "cd client && ng serve"
   },
   "dependencies": {
     "nodemon": "^3.1.2"
-  }
+  },
+  "workspaces": [
+    "client",
+    "server"
+  ]
 }
