--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && nodemon server.js",
-    "client": "cd client && ng serve"
+    "client": "cd client && ng serve",
+    "install-all": "./install-all.sh"
   },
   "dependencies": {
     "nodemon": "^3.1.2"
