remove install commands

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && nodemon server.js",
-    "client": "cd client && ng serve",
-    "postinstall": "./install-all.sh"
+    "client": "cd client && ng serve"
   },
   "dependencies": {
     "nodemon": "^3.1.2"
